--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   	var nav = $('.menu');
 
   	$(window).scroll(function () {
-  		if ($(this).scrollTop() > 120 && window.innerWidth >= 800 ) {
+  		if ($(this).scrollTop() > 150 && window.innerWidth >= 800 ) {
   			nav.addClass("f-menu");
   		} else if ($(this).scrollTop() > 1 && window.innerWidth < 800 ) {
           nav.addClass("f-menu");
@@ -62,7 +62,7 @@
 
    var logo = $('.logo-fixed');
     $(window).scroll(function () {
-  		if ($(this).scrollTop() > 120 && window.innerWidth >= 800) {
+  		if ($(this).scrollTop() > 150 && window.innerWidth >= 800) {
   			logo.addClass("logo-hidden");
   		} else {
   			logo.removeClass("logo-hidden");
@@ -80,7 +80,7 @@
 
     var lang = $('.lang-menu');
      $(window).scroll(function () {
-   		if ($(this).scrollTop() > 120 && window.innerWidth >= 800) {
+   		if ($(this).scrollTop() > 150 && window.innerWidth >= 800) {
    			lang.addClass("lang-hidden");
    		} else if ($(this).scrollTop() > 1 && window.innerWidth < 800) {
           lang.addClass("lang-hidden");
@@ -91,7 +91,7 @@
 
     var font = $('.menu-font');
      $(window).scroll(function () {
-   		if ($(this).scrollTop() > 120) {
+   		if ($(this).scrollTop() > 150) {
    			font.addClass("font-fixed");
    		} else {
    			font.removeClass("font-fixed");
@@ -106,6 +106,15 @@
    			headerm.removeClass("header-mobile-hidden");
    		}
    	});
+
+    var bannerm = $('.banner-m');
+     $(window).scroll(function () {
+      if ($(this).scrollTop() > 1 && window.innerWidth < 800) {
+        bannerm.addClass("banner-m-hidden");
+      } else {
+        bannerm.removeClass("banner-m-hidden");
+      }
+    });
 
   });
 
@@ -461,14 +470,13 @@
 <div class="footer">
   <div class="container">
     <div class="cols col-2 copyright">
-      <img src="img/logo-footer.png"/>
-      <i class="fa fa-copyright" aria-hidden="true"></i> shkiryak.com.ua, 2018
+      <p><i class="fa fa-copyright" aria-hidden="true"></i>2018 shkiryak.com.ua</p>
     </div>
-    <div class="cols col-5">
-      <p>Информация, опубликованная на сайте, предназначена только для ознакомления. Обязательно проконсультируйтесь со специалистом, чтобы не нанести вред своему здоровью.
+    <div class="cols col-7">
+      <p>Информация на сайте предназначена только для ознакомления. Проконсультируйтесь со специалистом, чтобы не нанести вред своему здоровью.
       </p>
     </div>
-    <div class="cols col-5 soc-icons">
+    <div class="cols col-3 soc-icons">
       <div>
         <a href="https://www.facebook.com/shkiryakofficial/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
         <a href="https://twitter.com/DrShkiryak" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
